--- a/src/assets/scss/base/defaults.scss
+++ b/src/assets/scss/base/defaults.scss
@@ -9,7 +9,7 @@ html,
 body {
   box-sizing: border-box;
 
-  font-family: 'Inter', sans-serif;
+  font-family: $primary-font;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
@@ -20,7 +20,7 @@ input,
 button {
   box-sizing: border-box;
 
-  font-family: 'Inter', sans-serif;
+  font-family: $primary-font;
 
   border: unset;
   outline: none;
@@ -42,4 +42,32 @@ ul {
   padding: 0;
 
   list-style: none;
+}
+
+.link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  color: $color-brand;
+  position: relative;
+  transition: $transition-default;
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: $color-brand;
+    transition: $transition-default;
+  }
+
+  &:hover {
+    color: $color-black;
+
+    &::before {
+      background-color: $color-black;
+    }
+  }
 }
