--- a/src/assets/scss/base/transitions.scss
+++ b/src/assets/scss/base/transitions.scss
@@ -22,7 +22,7 @@
   transition: opacity 0.3s;
 }
 
-.fade-enter,
+.fade-enter-from,
 .fade-leave-to {
   opacity: 0;
 }
@@ -33,7 +33,7 @@
     transition: all 0.4s ease-in-out;
   }
 
-  &-enter {
+  &-enter-from {
     transform: translateY(0);
     opacity: 0;
   }
@@ -43,7 +43,7 @@
     opacity: 1;
   }
 
-  &-leave {
+  &-leave-from {
     transform: translateY(0);
     opacity: 1;
   }
