--- a/src/assets/scss/base/transitions.scss
+++ b/src/assets/scss/base/transitions.scss
@@ -5,6 +5,7 @@
 .page-leave-active {
   transition: opacity 0.5s;
 }
+
 .page-enter,
 .page-leave-to {
   opacity: 0;
@@ -165,25 +166,25 @@
 //   transform: translateY(-30px);
 //   opacity: 0;
 // }
-
-// .dropdown-fade {
-//   &-enter,
-//   &-leave-to {
-//     transform: translateY(20px);
-//     opacity: 0;
-//   }
-
-//   &-enter-to,
-//   &-leave {
-//     transform: translateY(0);
-//     opacity: 1;
-//   }
-
-//   &-enter-active,
-//   &-leave-active {
-//     transition: opacity 0.2s ease, transform 0.4s ease, height 0.4s;
-//   }
-// }
+//
+//.dropdown-fade {
+//  &-enter-from,
+//  &-leave-to {
+//    transform: translateY(20px);
+//    opacity: 0;
+//  }
+//
+//  &-enter-to,
+//  &-leave-from {
+//    transform: translateY(0);
+//    opacity: 1;
+//  }
+//
+//  &-enter-active,
+//  &-leave-active {
+//    transition: opacity 0.2s ease, transform 0.4s ease, height 0.4s;
+//  }
+//}
 
 // @keyframes pulse {
 //   0% {
