--- a/src/assets/scss/base/defaults.scss
+++ b/src/assets/scss/base/defaults.scss
@@ -52,28 +52,15 @@ ul {
   font-size: 14px;
   line-height: 22px;
 
+  text-decoration: underline;
+
   transition: $transition-default;
-
-  &::before {
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-
-    width: 100%;
-    height: 1px;
-
-    background-color: $color-brand;
-
-    transition: $transition-default;
-
-    content: '';
-  }
 
   &:hover {
     color: $color-black;
-
-    &::before {
-      background-color: $color-black;
-    }
   }
+}
+
+.accent-text {
+  color: $color-brand;
 }
